website: fix z-index of the banner

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -49,7 +49,7 @@ a {
     width: 100%;
     height: 59px;
 
-    z-index: 100;
+    z-index: 500;
     background-color: #262626;
 }
 
@@ -175,7 +175,7 @@ a {
 }
 
 #banner .title {
-    z-index: 1000;
+    z-index: 150;
     width: 450px;
 
     text-align: center;
